<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <androidx.cardview.widget.CardView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginHorizontal="10dp"
           android:elevation="50dp"
           app:cardCornerRadius="30dp"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginHorizontal="10dp"
               android:orientation="vertical">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="10dp"
                   android:gravity="center"
                   android:text="@string/tv_title_login"
                   android:textSize="25sp"
                   android:textStyle="bold|italic" />

               <EditText

                   android:id="@+id/et_mail_login"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_margin="5dp"
                   android:autofillHints=""
                   android:hint="@string/et_mail"
                   android:inputType="textEmailAddress" />

               <EditText
                   android:id="@+id/et_pass_login"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_margin="5dp"
                   android:autofillHints=""
                   android:hint="@string/et_password"
                   android:inputType="textPassword" />

               <Switch
                   android:id="@+id/btn_remember_login"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="end"
                   android:layout_margin="5dp"
                   android:text="@string/btn_remember"
                   android:textColor="@color/grey_700"
                   tools:ignore="UseSwitchCompatOrMaterialXml" />

               <Button
                   android:id="@+id/btn_forgotten_login"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="end"
                   android:background="@null"
                   android:text="@string/btn_forgotten"
                   android:textColor="@color/blue_500" />

               <Button
                   android:id="@+id/btn_login"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_margin="5dp"
                   android:background="@drawable/my_desing_button_login"
                   android:text="@string/btn_login"
                   android:textColor="@color/white" />


               <Button
                   android:id="@+id/btn_register"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_margin="5dp"
                   android:textColor="@color/light_blue_400"
                   android:background="@drawable/my_desing_button_register"
                   android:text="@string/btn_register" />


           </LinearLayout>
       </androidx.cardview.widget.CardView>
   </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>